# VantaGrid

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
plugins/: registry.json
plugins/builtins/session-logger/: plugin.py
skills/: registry.json
skills/builtins/commit-message/: SKILL.md
skills/builtins/security-audit/: SKILL.md
src/vantagrid/: __init__.py  __main__.py  app.py  cli.py
src/vantagrid/models/: __init__.py  account.py  config.py  plugin.py  session.py  skill.py  theme.py  usage.py
src/vantagrid/services/: __init__.py  account_service.py  config_service.py  monitor_service.py  plugin_service.py  session_service.py  skill_service.py  switch_service.py  theme_service.py
src/vantagrid/themes/: __init__.py  cyberpunk.tcss  dracula.tcss  gruvbox.tcss  monochrome.tcss  nord.tcss  synthwave.tcss  tokyo_night.tcss
src/vantagrid/utils/: __init__.py  logging.py  pty.py
src/vantagrid/widgets/: __init__.py  command_palette.py  file_explorer.py  image_viewer.py  plugin_browser.py  skill_browser.py  status_bar.py  switch_toast.py  tab_bar.py  terminal_pane.py  theme_picker.py  usage_panel.py
tests/: conftest.py  test_account_service.py  test_config.py  test_models.py  test_monitor_service.py  test_session_service.py  test_skill_service.py  test_switch_service.py
