[project]
name = "vantagrid"
version = "0.1.0"
description = "Terminal IDE for multi-account Claude Code — split sessions, usage monitoring, skills, themes"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "haKCer" }]
keywords = ["claude", "claude-code", "terminal", "tui", "ide", "multi-account"]
readme = "README.md"

dependencies = [
    "textual>=3.0.0",
    "textual-terminal>=0.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.12.0",
    "mypy>=1.13.0",
]

[project.scripts]
vantagrid = "vantagrid.cli:main"
vg = "vantagrid.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vantagrid"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
